[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "pdm"
description = "A modern Python package and dependency manager supporting the latest PEP standards"
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
dynamic = ["version"]
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "blinker",
    "certifi",
    "packaging>=20.9,!=22.0",
    "platformdirs",
    "rich>=12.3.0",
    "virtualenv>=20",
    "pyproject-hooks",
    "requests-toolbelt",
    "unearth>=0.9.0",
    "findpython>=0.3.0",
    "tomlkit>=0.11.1,<1",
    "shellingham>=1.3.2",
    "python-dotenv>=0.15",
    "resolvelib>=1.0.1",
    "installer<0.8,>=0.7",
    "cachecontrol[filecache]>=0.13.0",
    "tomli>=1.1.0; python_version < \"3.11\"",
    "importlib-resources>=5; python_version < \"3.9\"",
    "importlib-metadata>=3.6; python_version < \"3.10\"",
]
readme = "README.md"
keywords = ["packaging", "dependency", "workflow"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://pdm.fming.dev"
Repository = "https://github.com/pdm-project/pdm"
Documentation = "https://pdm.fming.dev"
Changelog = "https://pdm.fming.dev/latest/dev/changelog/"

[project.optional-dependencies]
pytest = [
    "pytest",
    "pytest-mock",
]
keyring = [
    "keyring",
]
all = [
    "copier",
    "cookiecutter",
    "keyring",
    "truststore; python_version >= \"3.10\"",
]

[project.scripts]
pdm = "pdm.core:main"

[tool.pdm.version]
source = "scm"
write_to = "pdm/models/VERSION"

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "src"
includes = ["src/pdm"]
source-includes = ["tests", "CHANGELOG.md", "LICENSE", "README.md"]
# editables backend doesn't work well with namespace packages
editable-backend = "path"

[tool.pdm.scripts]
pre_release = "python tasks/max_versions.py"
release = "python tasks/release.py"
test = "pytest"
tox = "tox"
doc = {shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview"}
lint = "pre-commit run --all-files"
complete = {call = "tasks.complete:main", help = "Create autocomplete files for bash and fish"}

[tool.pdm.dev-dependencies]
test = [
    "pdm[pytest]",
    "pytest-cov",
    "pytest-xdist>=1.31.0",
    "pytest-rerunfailures>=10.2",
    "pytest-httpserver>=1.0.6",
]
tox = [
    "tox",
    "tox-pdm>=0.5",
]
doc = [
    "mkdocs>=1.1",
    "mkdocs-material>=7.3",
    "mkdocstrings[python]>=0.18",
    "mike>=1.1.2",
    "setuptools>=62.3.3",
    "markdown-exec>=0.7.0",
    "mkdocs-redirects>=1.2.0",
]
workflow = [
    "pdm-pep517>=1.0.0,<2.0.0",
    "parver>=0.3.1",
    "towncrier>=20",
    "pycomplete~=0.3"
]

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310"]

[tool.ruff]
line-length = 120
extend-select = [
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
extend-ignore = ["B018", "B019"]
src = ["src"]
exclude = ["tests/fixtures"]
target-version = "py37"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-first-party = ["pdm"]

[tool.towncrier]
package = "pdm"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/pdm-project/pdm/issues/{issue})"
directory = "news/"
title_format = "Release v{version} ({project_date})"
template = "news/towncrier_template.md"
underlines = "-~^"

  [[tool.towncrier.type]]
  directory = "break"
  name = "Breaking Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features & Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "doc"
  name = "Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "dep"
  name = "Dependencies"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Removals and Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "misc"
  name = "Miscellany"
  showcontent = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning"
]
markers = [
    "network: Tests that require network",
    "integration: Run with all Python versions",
    "path: Tests that compare with the system paths",
    "deprecated: Tests about deprecated features",
]
addopts = "-r aR"
testpaths = [
    "tests/",
]
