[project]
name = "pdm-chatbot"
version = "0.0.0"
authors = [
    {name = "Frost Ming", email = "me@frostming.com"},
]
dependencies = [
    "llama-index>=0.8.59",
    "setuptools>=68.2.2",
    "openai>=0.28.1",
    "streamlit>=1.28.1",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
package-type = "application"
