[build-system]
build-backend = "pdm.builders.api"
requires = ["pdm"]

[tool]
[tool.pdm]
author = "frostming <mianghong@gmail.com>"
description = ""
homepage = ""
license = "MIT"
name = "demo-package-extra"
python_requires = ">=3.5"
version = { from = "src/my_package/__init__.py" }
extras = ["all=be|te"]

[tool.pdm.dependencies]
urllib3 = "*"

[tool.pdm.dev-dependencies]

[tool.pdm.be-dependencies]
idna = "*"

[tool.pdm.te-dependencies]
chardet = "*"
