[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517"]

[tool]
[tool.pdm]
author = "frostming <mianghong@gmail.com>"
description = ""
homepage = ""
license = "MIT"
name = "demo-package-extra"
python_requires = ">=3.5"
version = "0.1.0"
extras = ["all=be|te"]

[tool.pdm.dependencies]
urllib3 = "*"

[tool.pdm.dev-dependencies]

[tool.pdm.be-dependencies]
idna = "*"

[tool.pdm.te-dependencies]
chardet = "*"
