[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "frostming", email = "mianghong@gmail.com"},
]
dynamic = ["version"]
requires-python = ">=3.5"
license = {text = "MIT"}
dependencies = []
description = ""
name = "demo-module"

[project.optional-dependencies]

[tool.pdm.version]
source = "file"
path = "foo_module.py"
