[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
dependencies = [
    "requests[security]~=2.26",
]
requires-python = ">=3.6"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
