[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
dependencies = [
    "requests[security]~=2.26",
]
requires-python = ">=3.6"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]
