[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517"]

[tool]
[tool.pdm]
author = "frostming <mianghong@gmail.com>"
description = ""
homepage = ""
license = "MIT"
name = "demo-package"
python_requires = ">=3.5"
version = { from = "src/my_package/__init__.py" }

[tool.pdm.dependencies]

[tool.pdm.dev-dependencies]
