[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "frostming", email = "mianghong@gmail.com"},
]
dynamic = ["version"]
requires-python = ">=3.5"
license = {text = "MIT"}
dependencies = []
description = ""
name = "demo-package"

[project.optional-dependencies]

[tool.pdm]
version = { from = "src/my_package/__init__.py" }
