
[project]
name = "demo"
version = "0.0.1"
description = "test demo"
requires-python = ">=3.3"
dependencies = [
    "idna",
    "chardet; os_name=='nt'",
]

[project.optional-dependencies]
tests = [
    "pytest",
]
security = [
    "requests; python_version>=\"3.6\"",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
