[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
version = "0.0.1"
dependencies = []
name = "test-plugin-pdm"

[project.optional-dependencies]

[project.entry-points."pdm.plugin"]
hello = "hello:main"
