[metadata]
name = mymodule
description = A test module
keywords = one, two
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.5
package_dir = = src
install_requires =
    requests
    importlib-metadata; python_version<"3.8"

[options.entry_points]
console_scripts =
    mycli = mymodule:main
